--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <meta name="keywords" content="Debt Collection Lawsuits" />
 <title>Debt Collection Lawsuits: Some Common FAQs Regarding The Legal Lawsuits</title>
 <meta name="description" content="It's crucial to reply, either on your own or by hiring an attorney, if a debt collector sues you to recover a debt. And keep in mind that you have rights while interacting with debt collection agencies">
-<link rel="canonical" href="">
+<link rel="canonical" href="https://debt-collection-lawsuits.netlify.app/">
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 <link rel="stylesheet" type="text/css" href="https://storage.googleapis.com/s3-urls/page-5-styles.css" />
 <script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
